--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
             <li><a href="./selector01.html" target="_blank">selector01</a></li>
             <li><a href="./selecotr02.html" target="_blank">selector01</a></li>
         </ul>
+        <h2>리셋실습</h2>
+        <ul>
+            <li>
+                <a href="./reset.html" target="_blank">reset
+                </a>
+            </li>
+        </ul>
+        <h2>laout</h2>
+        <ul>
+            <li>
+                <a href="./layout01.html" target="_blank">layout
+                </a>
+            </li>
+        </ul>
 
     </section>
 </body>
