--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </a>
             </li>
         </ul>
-        <h2>laout</h2>
+        <h2>layout</h2>
         <ul>
             <li>
                 <a href="./layout01.html" target="_blank">layout
