--- a/index.html
+++ b/index.html
@@ -27,10 +27,25 @@
                 </a>
             </li>
         </ul>
-        <h2>layout</h2>
+        <h2>layout실습</h2>
         <ul>
             <li>
                 <a href="./layout01.html" target="_blank">layout
+                </a>
+            </li>
+        </ul>
+        <h2>delete실습</h2>
+        <ul>
+            <li>
+                <a href="./delete.html" target="_blank">layout
+                </a>
+            </li>
+        </ul>
+
+        <h2>반응형 웹01</h2>
+        <ul>
+            <li>
+                <a href="./responsive.html" target="_blank">layout
                 </a>
             </li>
         </ul>
