--- a/responsive.html
+++ b/responsive.html
@@ -16,12 +16,6 @@
             display: none;
         }
 
-
-
-
-
-
-
         @media(max-width: 768px) {
             .mopen {
                 position: fixed;
@@ -34,7 +28,7 @@
             section {
                 position: relative;
                 height: 100vh;
-                background: #555 no-repeat fixed center center/cover;
+                background: url(./bg01.jpg) no-repeat fixed center center/cover;
             }
 
             div {
@@ -52,6 +46,7 @@
             P {
                 text-align: center;
                 font-size: 2vw;
+                color: #f11;
             }
         }
     </style>
