--- a/responsive.html
+++ b/responsive.html
@@ -38,12 +38,12 @@
                 display: block;
             }
 
-            h2 {
+            div h2 {
                 text-align: center;
                 font-size: 4vw;
             }
 
-            P {
+            div P {
                 text-align: center;
                 font-size: 2vw;
                 color: #f11;
